--- a/05_Module_Lists_Tuples_Sets/list.ipynb
+++ b/05_Module_Lists_Tuples_Sets/list.ipynb
@@ -24,21 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[121], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m declared_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "declared_list = list()"
    ]
@@ -211,15 +199,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['facebook', 'Google', 'Microsoft', 'Apple', 'IBM', 'Oracle', 'Amazon', 'SpaceX', 'SpaceX']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_company.append('SpaceX')\n",
     "print(it_company)           # adding SpeceX to the list"
@@ -236,15 +216,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['facebook', 'Google', 'Microsoft', 'Apple', 'Tecno', 'IBM', 'Oracle', 'Amazon', 'SpaceX']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_company.insert(4, 'Tecno')\n",
     "print(it_company)"
@@ -275,15 +247,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "facebook#.Google#.Microsoft#.Apple#.Tecno#.IBM#.Oracle#.Amazon#.SpaceX\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "joined_it_companies = '#.'.join(it_company)\n",
     "print(joined_it_companies)"
@@ -300,15 +264,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "checking = 'facebook' in it_company\n",
     "print(checking)         # checking if facebook exists it company"
@@ -325,15 +281,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Amazon', 'Apple', 'Google', 'IBM', 'Microsoft', 'Oracle', 'SpaceX', 'Tecno', 'facebook']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_company.sort()\n",
     "print(it_company)"
@@ -367,15 +315,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['facebook', 'Tecno', 'SpaceX']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "slice_first_three = it_company[:3]\n",
     "print(slice_first_three)"
@@ -392,15 +332,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Google', 'Apple', 'Amazon']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "slice_last_three = it_company[6:]\n",
     "print(slice_last_three)"
@@ -417,15 +349,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Google\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "slice_middle_item = it_company[6]\n",
     "print(slice_middle_item)"
@@ -442,15 +366,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Tecno', 'SpaceX', 'Oracle', 'Microsoft', 'Google', 'Apple', 'Amazon']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_company.remove('IBM')\n",
     "print(it_company)"
@@ -467,15 +383,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Tecno', 'SpaceX', 'Oracle', 'Google', 'Apple', 'Amazon']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_company.remove('Microsoft')\n",
     "print(it_company)"
@@ -492,15 +400,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Tecno', 'SpaceX', 'Oracle', 'Google', 'Apple']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_company.remove('Amazon')\n",
     "print(it_company)"
@@ -533,19 +433,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'it_company' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[110], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mit_company\u001b[49m\u001b[38;5;241m.\u001b[39mclear\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(it_company)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'it_company' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_company.clear\n",
     "print(it_company)"
@@ -566,15 +454,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['HTML', 'CSS', 'JS', 'React', 'Redux', 'Node', 'Express', 'MongoDB']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "front_end = ['HTML', 'CSS', 'JS', 'React', 'Redux']\n",
     "\n",
@@ -592,18 +472,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['HTML', 'CSS', 'JS', 'React', 'Redux', 'Node', 'Express', 'MongoDB']\n",
-      "['HTML', 'CSS', 'JS', 'React', 'Python', 'SQL', 'Express', 'MongoDB']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "full_stack = joining.copy()\n",
     "print(full_stack)\n",
@@ -611,6 +482,435 @@
     "full_stack[4] = 'Python'\n",
     "full_stack[5] = 'SQL'\n",
     "print(full_stack)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises: Level 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. The following is a list of 10 students ages:\n",
+    "\n",
+    "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sorting the list ages\n",
+    "\n",
+    "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]\n",
+    "ages.sort()\n",
+    "print(ages)         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the min age and the max age again to the list\n",
+    "\n",
+    "min_age = min(ages)\n",
+    "max_age = max(ages)\n",
+    "\n",
+    "ages.append(min_age)\n",
+    "ages.append(max_age)\n",
+    "\n",
+    "print(\"Updated ages:\", ages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the median age (one middle item or two middle items divided by two)\n",
+    "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]\n",
+    "\n",
+    "ages.sort()\n",
+    "print(ages)         #sorting the list \n",
+    "\n",
+    "n = len(ages)           #checking the length of the list\n",
+    "\n",
+    "if n % 2 == 0:\n",
+    "    median = (ages[n // 2-1] + ages[n // 2]) / 2        # checking for if the number is even\n",
+    "else:\n",
+    "    median = ages[n // 2]           #checking for if the number is odd\n",
+    "\n",
+    "print('Median Age:', median)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the average age (sum of all items divided by their number )\n",
+    "\n",
+    "total_sum = sum(ages)           # adding the total ages\n",
+    "\n",
+    "n = len(ages)           # finding the length of the list\n",
+    "\n",
+    "average_age = total_sum / n         # finding the average ages using the total sum and the len n\n",
+    "print('Average ages is',average_age)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the range of the ages (max minus min)\n",
+    "\n",
+    "range = max_age - min_age\n",
+    "\n",
+    "print('the ranges of teh ages is', range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare the value of (min - average) and (max - average), use abs() method\n",
+    "\n",
+    "min_difference = abs(min_age - average_age)             # calculating the absolute min difference\n",
+    "max_difference = abs(max_age - average_age)             # calculating the absolute max difference\n",
+    "\n",
+    "comparison = 'Min difference is greater than' if max_difference > min_difference else \"Max difference is greater than or equal\"\n",
+    "print(f'Min difference is {min_difference:2f}')\n",
+    "print(f'Max difference is {max_difference:2f}')\n",
+    "print(comparison)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the middle country(ies) in the countries list\n",
+    "countries = [\n",
+    "  'Afghanistan',\n",
+    "  'Albania',\n",
+    "  'Algeria',\n",
+    "  'Andorra',\n",
+    "  'Angola',\n",
+    "  'Antigua and Barbuda',\n",
+    "  'Argentina',\n",
+    "  'Armenia',\n",
+    "  'Australia',\n",
+    "  'Austria',\n",
+    "  'Azerbaijan',\n",
+    "  'Bahamas',\n",
+    "  'Bahrain',\n",
+    "  'Bangladesh',\n",
+    "  'Barbados',\n",
+    "  'Belarus',\n",
+    "  'Belgium',\n",
+    "  'Belize',\n",
+    "  'Benin',\n",
+    "  'Bhutan',\n",
+    "  'Bolivia',\n",
+    "  'Bosnia and Herzegovina',\n",
+    "  'Botswana',\n",
+    "  'Brazil',\n",
+    "  'Brunei',\n",
+    "  'Bulgaria',\n",
+    "  'Burkina Faso',\n",
+    "  'Burundi',\n",
+    "  'Cambodia',\n",
+    "  'Cameroon',\n",
+    "  'Canada',\n",
+    "  'Cape Verde',\n",
+    "  'Central African Republic',\n",
+    "  'Chad',\n",
+    "  'Chile',\n",
+    "  'China',\n",
+    "  'Colombi',\n",
+    "  'Comoros',\n",
+    "  'Congo (Brazzaville)',\n",
+    "  'Congo',\n",
+    "  'Costa Rica',\n",
+    "  \"Cote d'Ivoire\",\n",
+    "  'Croatia',\n",
+    "  'Cuba',\n",
+    "  'Cyprus',\n",
+    "  'Czech Republic',\n",
+    "  'Denmark',\n",
+    "  'Djibouti',\n",
+    "  'Dominica',\n",
+    "  'Dominican Republic',\n",
+    "  'East Timor (Timor Timur)',\n",
+    "  'Ecuador',\n",
+    "  'Egypt',\n",
+    "  'El Salvador',\n",
+    "  'Equatorial Guinea',\n",
+    "  'Eritrea',\n",
+    "  'Estonia',\n",
+    "  'Ethiopia',\n",
+    "  'Fiji',\n",
+    "  'Finland',\n",
+    "  'France',\n",
+    "  'Gabon',\n",
+    "  'Gambia, The',\n",
+    "  'Georgia',\n",
+    "  'Germany',\n",
+    "  'Ghana',\n",
+    "  'Greece',\n",
+    "  'Grenada',\n",
+    "  'Guatemala',\n",
+    "  'Guinea',\n",
+    "  'Guinea-Bissau',\n",
+    "  'Guyana',\n",
+    "  'Haiti',\n",
+    "  'Honduras',\n",
+    "  'Hungary',\n",
+    "  'Iceland',\n",
+    "  'India',\n",
+    "  'Indonesia',\n",
+    "  'Iran',\n",
+    "  'Iraq',\n",
+    "  'Ireland',\n",
+    "  'Israel',\n",
+    "  'Italy',\n",
+    "  'Jamaica',\n",
+    "  'Japan',\n",
+    "  'Jordan',\n",
+    "  'Kazakhstan',\n",
+    "  'Kenya',\n",
+    "  'Kiribati',\n",
+    "  'Korea, North',\n",
+    "  'Korea, South',\n",
+    "  'Kuwait',\n",
+    "  'Kyrgyzstan',\n",
+    "  'Laos',\n",
+    "  'Latvia',\n",
+    "  'Lebanon',\n",
+    "  'Lesotho',\n",
+    "  'Liberia',\n",
+    "  'Libya',\n",
+    "  'Liechtenstein',\n",
+    "  'Lithuania',\n",
+    "  'Luxembourg',\n",
+    "  'Macedonia',\n",
+    "  'Madagascar',\n",
+    "  'Malawi',\n",
+    "  'Malaysia',\n",
+    "  'Maldives',\n",
+    "  'Mali',\n",
+    "  'Malta',\n",
+    "  'Marshall Islands',\n",
+    "  'Mauritania',\n",
+    "  'Mauritius',\n",
+    "  'Mexico',\n",
+    "  'Micronesia',\n",
+    "  'Moldova',\n",
+    "  'Monaco',\n",
+    "  'Mongolia',\n",
+    "  'Morocco',\n",
+    "  'Mozambique',\n",
+    "  'Myanmar',\n",
+    "  'Namibia',\n",
+    "  'Nauru',\n",
+    "  'Nepal',\n",
+    "  'Netherlands',\n",
+    "  'New Zealand',\n",
+    "  'Nicaragua',\n",
+    "  'Niger',\n",
+    "  'Nigeria',\n",
+    "  'Norway',\n",
+    "  'Oman',\n",
+    "  'Pakistan',\n",
+    "  'Palau',\n",
+    "  'Panama',\n",
+    "  'Papua New Guinea',\n",
+    "  'Paraguay',\n",
+    "  'Peru',\n",
+    "  'Philippines',\n",
+    "  'Poland',\n",
+    "  'Portugal',\n",
+    "  'Qatar',\n",
+    "  'Romania',\n",
+    "  'Russia',\n",
+    "  'Rwanda',\n",
+    "  'Saint Kitts and Nevis',\n",
+    "  'Saint Lucia',\n",
+    "  'Saint Vincent',\n",
+    "  'Samoa',\n",
+    "  'San Marino',\n",
+    "  'Sao Tome and Principe',\n",
+    "  'Saudi Arabia',\n",
+    "  'Senegal',\n",
+    "  'Serbia and Montenegro',\n",
+    "  'Seychelles',\n",
+    "  'Sierra Leone',\n",
+    "  'Singapore',\n",
+    "  'Slovakia',\n",
+    "  'Slovenia',\n",
+    "  'Solomon Islands',\n",
+    "  'Somalia',\n",
+    "  'South Africa',\n",
+    "  'Spain',\n",
+    "  'Sri Lanka',\n",
+    "  'Sudan',\n",
+    "  'Suriname',\n",
+    "  'Swaziland',\n",
+    "  'Sweden',\n",
+    "  'Switzerland',\n",
+    "  'Syria',\n",
+    "  'Taiwan',\n",
+    "  'Tajikistan',\n",
+    "  'Tanzania',\n",
+    "  'Thailand',\n",
+    "  'Togo',\n",
+    "  'Tonga',\n",
+    "  'Trinidad and Tobago',\n",
+    "  'Tunisia',\n",
+    "  'Turkey',\n",
+    "  'Turkmenistan',\n",
+    "  'Tuvalu',\n",
+    "  'Uganda',\n",
+    "  'Ukraine',\n",
+    "  'United Arab Emirates',\n",
+    "  'United Kingdom',\n",
+    "  'United States',\n",
+    "  'Uruguay',\n",
+    "  'Uzbekistan',\n",
+    "  'Vanuatu',\n",
+    "  'Vatican City',\n",
+    "  'Venezuela',\n",
+    "  'Vietnam',\n",
+    "  'Yemen',\n",
+    "  'Zambia',\n",
+    "  'Zimbabwe',\n",
+    "];\n",
+    "\n",
+    "countries.sort()            # sorting\n",
+    "n = len(countries)\n",
+    "if n % 2 == 0:          #even number of countries\n",
+    "    middle_countries = countries[n //2 - 1:n // 2 + 1]          \n",
+    "else:                   #odd  number of countries\n",
+    "    middle_countries = [countries[n // 2]]          \n",
+    "\n",
+    "print('sorted countries:', countries)\n",
+    "print('Middle country(ies):', middle_countries)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Divide the countries list into two equal lists if it is even if not one more country for the first half.\n",
+    "\n",
+    "mid_point = (len(countries) + 1) // 2           #finding the midpoint\n",
+    "#spliting the countries\n",
+    "first_half = countries[:mid_point]\n",
+    "second_half = countries[mid_point:]\n",
+    "\n",
+    "print('First half are', first_half)\n",
+    "print('Second half are', second_half)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ['China', 'Russia', 'USA', 'Finland', 'Sweden', 'Norway', 'Denmark']. Unpack the first three countries and the rest as scandic countries\n",
+    "\n",
+    "first, second, third ,*scandic_coiuntries = countries\n",
+    "\n",
+    "print('First Country', first)\n",
+    "print('Second Country', second)\n",
+    "print('Third Country', third)\n",
+    "print('Scandic Couintries are', scandic_coiuntries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "💻 Tuple Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuple Exercises: Level 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Create an empty tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empty_tuple = ()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Create a tuple containing names of your sisters and your brothers (imaginary siblings are fine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Brothers = ('Ibrahim', 'Sani', 'Mahbub', 'Muqaffa', 'Bashir', 'Isa')\n",
+    "\n",
+    "sisters = ('Fatima', 'Aisha', 'Khadija', 'Maryam')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Join brothers and sisters tuples and assign it to siblings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "siblings = Brothers."
    ]
   }
  ],
