--- a/06_Module_Dictionaries/Dictionaries.ipynb
+++ b/06_Module_Dictionaries/Dictionaries.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Python', 'Java', 'Problem Solving']\n",
+      "['data entry', 'emerging tech']\n",
       "<class 'str'>\n"
      ]
     }
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'first_name': 'muhd', 'last_name': 'bashir', 'gender': 'male', 'age': 21, 'marital_status': 'single', 'skills': ['Python', 'Java', 'Problem Solving', 'cyber security'], 'country': 'nigeria', 'city': 'kano', 'address': 'rumfar shehu rijiyar zaki'}\n"
+      "{'first_name': 'muhd', 'last_name': 'bashir', 'gender': 'male', 'age': 21, 'marital_status': 'single', 'skills': ['data entry', 'emerging tech', 'cyber security'], 'country': 'nigeria', 'city': 'kano', 'address': 'rumfar shehu rijiyar zaki'}\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_values(['muhd', 'bashir', 'male', 21, 'single', ['Python', 'Java', 'Problem Solving', 'cyber security'], 'nigeria', 'kano', 'rumfar shehu rijiyar zaki'])\n"
+      "dict_values(['muhd', 'bashir', 'male', 21, 'single', ['data entry', 'emerging tech', 'cyber security'], 'nigeria', 'kano', 'rumfar shehu rijiyar zaki'])\n"
      ]
     }
    ],
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([('first_name', 'muhd'), ('last_name', 'bashir'), ('gender', 'male'), ('age', 21), ('marital_status', 'single'), ('skills', ['Python', 'Java', 'Problem Solving', 'cyber security']), ('country', 'nigeria'), ('city', 'kano'), ('address', 'rumfar shehu rijiyar zaki')])\n"
+      "dict_items([('first_name', 'muhd'), ('last_name', 'bashir'), ('gender', 'male'), ('age', 21), ('marital_status', 'single'), ('skills', ['data entry', 'emerging tech', 'cyber security']), ('country', 'nigeria'), ('city', 'kano'), ('address', 'rumfar shehu rijiyar zaki')])\n"
      ]
     }
    ],
@@ -239,19 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'age'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mStudent_dct\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mage\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(Student_dct)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'age'"
-     ]
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -268,21 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Student_dct' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Deleting student dictionary\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mStudent_dct\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Student_dct' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Deleting student dictionary\n",
     "del Student_dct"
