02_Module_Variable_built_in_function/variable.ipynb

--- a/02_Module_Variable_built_in_function/variable.ipynb
+++ b/02_Module_Variable_built_in_function/variable.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 💻 Exercises - Module 2\n",
-    "LEVEL 1"
+    "## 💻 Exercises - Module 2  Variable\n",
+    "Exercises: Level 1"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "source": [
     "## 💻 Exercises - Module 2\n",
     "\n",
-    "LEVEL 2"
+    "vExercises: Level 2"
    ]
   },
   {
