04_Module_String/string.ipynb

--- a/04_Module_String/string.ipynb
+++ b/04_Module_String/string.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 💻 Exercises - Module 4"
+    "## 💻 Exercises - Module 4  String"
    ]
   },
   {
