05_Module_Lists_Tuples_Sets/list_tuple_set.ipynb

--- a/05_Module_Lists_Tuples_Sets/list_tuple_set.ipynb
+++ b/05_Module_Lists_Tuples_Sets/list_tuple_set.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 💻 Exercises - Module 5\n",
+    "## 💻 Exercises - Module 5  List, Tuple and Set\n",
     "Exercises: Level 1"
    ]
   },
