06_Module_Dictionaries/Dictionaries.ipynb

--- a/06_Module_Dictionaries/Dictionaries.ipynb
+++ b/06_Module_Dictionaries/Dictionaries.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 💻 Exercises - Module 6"
+    "## 💻 Exercises - Module 6 Dictionaries"
    ]
   },
   {
