08_Module_Loops/Loops.ipynb

--- a/08_Module_Loops/Loops.ipynb
+++ b/08_Module_Loops/Loops.ipynb
@@ -98,9 +98,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "printing the above block of #\n",
+      "#########\n",
+      "#########\n",
+      "#########\n",
+      "#########\n",
+      "#########\n",
+      "#########\n",
+      "#########\n",
+      "#########\n",
+      "#########\n"
+     ]
+    }
+   ],
    "source": [
     "# # # # # # # #\n",
     "# # # # # # # #\n",
@@ -155,9 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "Numpy\n",
+      "Pandas\n",
+      "Django\n",
+      "Flask\n"
+     ]
+    }
+   ],
    "source": [
     "lists = ['Python', 'Numpy','Pandas','Django', 'Flask']\n",
     "for list in lists:\n",
@@ -192,72 +221,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Odd numbers from 0 to 100')\n",
+    "for i in range(101):\n",
+    "    if i % 2 != 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises: Level 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Use for loop to iterate from 0 to 100 and print the sum of all numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Using a for loop to print the sum of numbers from 0 to 100')\n",
+    "total_sum = 0\n",
+    "for i in range(101):\n",
+    "    total_sum += i\n",
+    "print('The sum of all numbers is', total_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Use for loop to iterate from 0 to 100 and print the sum of all evens and the sum of all odds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Odd numbers from 0 to 100\n",
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n",
-      "21\n",
-      "23\n",
-      "25\n",
-      "27\n",
-      "29\n",
-      "31\n",
-      "33\n",
-      "35\n",
-      "37\n",
-      "39\n",
-      "41\n",
-      "43\n",
-      "45\n",
-      "47\n",
-      "49\n",
-      "51\n",
-      "53\n",
-      "55\n",
-      "57\n",
-      "59\n",
-      "61\n",
-      "63\n",
-      "65\n",
-      "67\n",
-      "69\n",
-      "71\n",
-      "73\n",
-      "75\n",
-      "77\n",
-      "79\n",
-      "81\n",
-      "83\n",
-      "85\n",
-      "87\n",
-      "89\n",
-      "91\n",
-      "93\n",
-      "95\n",
-      "97\n",
-      "99\n"
+      "The sum of odds 2500\n",
+      "The sum of evens 2550\n"
      ]
     }
    ],
    "source": [
-    "print('Odd numbers from 0 to 100')\n",
+    "sum_evens = 0\n",
+    "sum_odds = 0 \n",
     "for i in range(101):\n",
-    "    if i % 2 != 0:\n",
-    "        print(i)"
+    "    if i % 2 == 0:\n",
+    "        sum_evens += i\n",
+    "    else:\n",
+    "        sum_odds += i\n",
+    "print(\"The sum of odds\", sum_odds)\n",
+    "print(\"The sum of evens\", sum_evens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises: Level 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Go to the data folder and use the countries.py file. Loop through the countries and extract all the countries containing the word land."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. This is a fruit list, ['banana', 'orange', 'mango', 'lemon'] reverse the order using loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lemon', 'mango', 'orange', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list =['banana', 'orange', 'mango', 'lemon']\n",
+    "reversed_list = []\n",
+    "for i in range(len(list) -1, -1, -1):\n",
+    "    reversed_list.append(list[i])\n",
+    "print(reversed_list)"
    ]
   }
  ],
