07_Module_Condition/condition.ipynb

--- a/07_Module_Condition/condition.ipynb
+++ b/07_Module_Condition/condition.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 💻 Exercises - Module 6 Condition\n",
+    "## 💻 Exercises - Module 7 Condition\n",
     "Exercises: Level 1"
    ]
   },
@@ -34,9 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m user_age \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m missing_years \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m18\u001b[39m \u001b[38;5;241m-\u001b[39m user_age\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m user_age \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m18\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     ]
+    }
+   ],
    "source": [
     "user_age = float(input())\n",
     "missing_years = 18 - user_age\n",
@@ -63,7 +75,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "my_age = 21\n",
     "your_age = int(input(\"Enter your age:\"))\n",
@@ -102,7 +124,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "num_one = int(input(\"Enter number:\"))\n",
     "num_two = int(input(\"Enter number: \"))\n",
@@ -142,7 +174,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "score = int(input())\n",
     "if 80 <= score <=100:\n",
@@ -171,7 +213,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "month = input('Enter the month: ').strip().capitalize()\n",
     "\n",
@@ -209,7 +261,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "fruits = ['banana', 'orange', 'mango', 'lemon']\n",
     "new_fruits = input(\"Enter a fruit: \").lower().strip()\n",
@@ -241,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -252,6 +314,15 @@
       "Is 'Python' inside the skill? True\n",
       "He is a backend developer\n",
       "Asabeneh Yetayeh lives in Finland. He is married.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -281,23 +352,24 @@
     "    is_python = 'Python' in person['skills']\n",
     "    print(f\"Is 'Python' inside the skill? {is_python}\")\n",
     "\n",
-    "# If a person skills has only JavaScript and React, print('He is a front end developer'), \n",
-    "# if the person skills has Node, Python, MongoDB, print('He is a backend developer'), \n",
-    "# if the person skills has React, Node and MongoDB, Print('He is a fullstack developer'), \n",
+    " \n",
     "# else print('unknown title') - for more accurate results more conditions can be nested!\n",
     "if 'skills' in person:\n",
     "    skills = set(person['skills'])\n",
     "    if skills == {'Javascript', 'React'}:\n",
-    "        print('He is a front end developer')\n",
+    "        print('He is a front end developer')        # If a person skills has only JavaScript and React, print('He is a front end developer'), \n",
     "    elif skills.issuperset({'Node', 'Python', 'MongoDB'}):\n",
-    "        print('He is a backend developer')\n",
+    "        print('He is a backend developer')          # if the person skills has Node, Python, MongoDB, print('He is a backend developer')\n",
     "    elif skills.issuperset({'React', 'Node', 'MongoDB'}):\n",
-    "        print('he is a fullstack developer')\n",
+    "        print('he is a fullstack developer')        # if the person skills has React, Node and MongoDB, Print('He is a fullstack developer'),\n",
     "    else:\n",
     "        print('Unknown title')\n",
     "\n",
-    "# If the person is married and if he lives in Finland, print the information in the following format/:\n",
-    "# Asabeneh Yetayeh lives in Finland. He is married.\n",
+    "'''\n",
+    "If the person is married and if he lives in Finland, print the information in the following format/:\n",
+    "Asabeneh Yetayeh lives in Finland. He is married.\n",
+    "'''\n",
+    "\n",
     "if person.get('is_married') and person.get('country') == 'Finland':\n",
     "    first_name = person['first_name']\n",
     "    last_name = person['last_name']\n",
