--- a/01_Module_Introduction/Introduction.ipynb
+++ b/01_Module_Introduction/Introduction.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "# **INTROUCTORY PART OF 30 days of Python Programming**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 1: 30 Days of python programming"
+    "**Module 1 of 30 Days of python programming**"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checking data types"
+    "**Checking data types**"
    ]
   },
   {
