--- a/02_Module_Variable_built_in_function/variable.ipynb
+++ b/02_Module_Variable_built_in_function/variable.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 2: 30 Days of python programming"
+    "# MODULE 2 OF 30 Days of python programming"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## 💻 Exercises - Module 2  Variable\n",
-    "Exercises: Level 1"
+    "**Exercises: Level 1**"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "source": [
     "## 💻 Exercises - Module 2\n",
     "\n",
-    "vExercises: Level 2"
+    "**Exercises: Level 2**"
    ]
   },
   {
