--- a/05_Module_Lists_Tuples_Sets/list_tuple_set.ipynb
+++ b/05_Module_Lists_Tuples_Sets/list_tuple_set.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 5: 30 Days of python programming"
+    "# MODULE 5 OF 30 Days of python programming"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## 💻 Exercises - Module 5  List, Tuple and Set\n",
-    "Exercises: Level 1"
+    "**Exercises: Level 1**"
    ]
   },
   {
@@ -488,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises: Level 2"
+    "**Exercises: Level 2**"
    ]
   },
   {
@@ -951,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tuple Exercises: Level 2"
+    "**Tuple Exercises: Level 2**"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sets Exercises: Level 1"
+    "**Sets Exercises: Level 1**"
    ]
   },
   {
@@ -1182,7 +1182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sets Exercises: Level 2"
+    "**Sets Exercises: Level 2**"
    ]
   },
   {
@@ -1314,7 +1314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sets Exercises: Level 3"
+    "**Sets Exercises: Level 3**"
    ]
   },
   {
