--- a/06_Module_Dictionaries/Dictionaries.ipynb
+++ b/06_Module_Dictionaries/Dictionaries.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 6: 30 Days of python programming"
+    "# MODULE 6 OF 30 Days of python programming"
    ]
   },
   {
