--- a/09_Module_Function_list_comprehensions/functions_list_comprehensions.ipynb
+++ b/09_Module_Function_list_comprehensions/functions_list_comprehensions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 9: 30 Days of python programming"
+    "# MODULE 9 30 Days of python programming"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## 💻 Exercises - Module 9 Functions list and comprehension\n",
-    "Exercises: Level 1"
+    "**Exercises: Level 1**"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises: Level 2"
+    "**Exercises: Level 2**"
    ]
   },
   {
@@ -456,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises: Level 3"
+    "**Exercises: Level 3**"
    ]
   },
   {
@@ -597,9 +597,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List Comprehensions Exercises\n",
+    "**List Comprehensions Exercises**\n",
     "\n",
-    "Exercises: Level 3"
+    "**Exercises: Level 3**"
    ]
   },
   {
