--- a/04_Module_String/string.ipynb
+++ b/04_Module_String/string.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 4: 30 Days of python programming"
+    "# MODULE 4 OF 30 Days of python programming"
    ]
   },
   {
