--- a/08_Module_Loops/Loops.ipynb
+++ b/08_Module_Loops/Loops.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 8: 30 Days of python programming"
+    "# MODULE 8 OF 30 Days of python programming"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## 💻 Exercises - Module 8 Condition\n",
-    "Exercises: Level 1"
+    "**Exercises: Level 1**"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises: Level 2"
+    "**Exercises: Level 2**"
    ]
   },
   {
@@ -247,9 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a for loop to print the sum of numbers from 0 to 100\n",
+      "The sum of all numbers is 5050\n"
+     ]
+    }
+   ],
    "source": [
     "print('Using a for loop to print the sum of numbers from 0 to 100')\n",
     "total_sum = 0\n",
@@ -295,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises: Level 3"
+    "**Exercises: Level 3**"
    ]
   },
   {
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
