--- a/03_Module_Operators/operator.ipynb
+++ b/03_Module_Operators/operator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 3: 30 Days of python programming"
+    "# MODULE 3 OF 30 Days of python programming"
    ]
   },
   {
